@@ -10,7 +10,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
         <javafx.version>18</javafx.version>
         <attach.version>4.0.14</attach.version>
         <gluonfx.plugin.version>1.0.14</gluonfx.plugin.version>
@@ -39,6 +39,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -46,7 +50,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.plugin.version}</version>
                 <configuration>
+                    <launcher>Mes</launcher>
                     <mainClass>${mainClassName}</mainClass>
+                    <noManPages>true</noManPages>
+                    <stripDebug>true</stripDebug>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <options>
+                        <option>-XX:+UseZGC</option>
+                    </options>
                 </configuration>
             </plugin>
 
